# cse220_hw4

./: .gitignore  CMakeLists.txt  hw4_client_soln  hw4_server_soln
.devcontainer/: devcontainer.json
include/: hw4.h
src/: hw4.c  hw4_client.c  hw4_server.c
tests/include/: test_utils.h
tests/src/: test_utils.cpp  tests_chessboard_to_fen.cpp  tests_fen_to_chessboard.cpp  tests_initialize_game.cpp  tests_is_valid.cpp  tests_make_move_complex.cpp  tests_make_move_simple.cpp  tests_parse_move.cpp  tests_save_load_game.cpp  tests_send_receive_command.cpp  tests_simulations.cpp  tests_simulations2.cpp
